# personal-graph

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: libsql-turso-db.yaml  personal-graph.yaml
examples/: dspy_program.py  fhir_ontology_api.py  fhir_ontology_example.py  fhirgraphdb.py  libsql-graph.ipynb  low_level_api.py  nl_interface.py  onto_graph_api.py  ontology_example.py  personal-graph.ipynb  pythonic_api.py  pythonic_service_api.py  retriever_example.py  test_external_service.py  test_fhirbundle.py
fhir_ontology/: fhir_ontology.json  fhir_ontology_json.py  ontology_classes_and_properties.pkl  visualize_fhir_ontology.py
libsql_graph_db/: __init__.py  database.py  embeddings.py  graph.py  ml.py  models.py  natural.py  visualizers.py
libsql_graph_db/sql/: count-edges.sql  count-nodes.sql  existing-edge.sql  insert-edge-embedding.sql  insert-edge.sql  insert-node-embedding.sql  insert-node.sql  schema.sql  search-node.template  search-where.template  update-node.sql  vector-search-edge.sql  vector-search-query.sql
libsql_graph_db/tests/: conftest.py  test_database.py  test_natural.py  test_visualizers.py
personal_graph/: __init__.py  clients.py  database.py  embeddings.py  extract_classes.py  fhir_ontology.py  graph.py  helper.py  ml.py  models.py  natural.py  onto_graph.py  ontology.py  retriever.py  text.py  vectorstore.py  visualize_fhir.py  visualize_fhir_bundle.py  visualizers.py
personal_graph/database/: __init__.py  basevectorstore.py  db.py  externalservice.py  persistence_layer.py  sqlitevss.py  vector_store.py  vlitedatabase.py
personal_graph/database/database_store/: __init__.py  database_store.py  sqlite.py  turso.py
personal_graph/database/fhirdb/: fhirDB.py
personal_graph/database/fhirservice/: fhirservice.py
personal_graph/database/sql/: existing-edge.sql  existing-node.sql  vector-search-node.sql
personal_graph/database/sqlite/: sqlite.py
personal_graph/database/tursodb/: turso.py
personal_graph/database/vector_store/: __init__.py  sqlitevss.py  vector_store.py  vlitedatabase.py
personal_graph/graph_generator/: __init__.py  generator.py
personal_graph/persistence_layer/: __init__.py
personal_graph/persistence_layer/database/: __init__.py  database_store.py  db.py
personal_graph/persistence_layer/vector_store/: __init__.py  vector_store.py
personal_graph/sql/: existing-edge.sql  insert-edge.sql  insert-node.sql  schema.sql  search-where.template  traverse.template  update-node.sql  vector-search-edge.sql  vector-search-node-desc.sql  vector-search-node-sort-desc.sql  vector-search-node-sort.sql  vector-search-node.sql
personal_graph/tests/: conftest.py  test_database.py  test_graph.py  test_ml.py  test_natural.py
personal_graph/vector_store/: __init__.py
scripts/: create_cache.py  kgchat.py  retriever.py  time_complexity.py
src/: libsql-graph.ipynb  simple-graph.ipynb
src/libsql_graph_db/: database.py
src/simple_graph_libsql/: visualizers.py
src/simple_graph_sqlite/: database.py  simple_graph.py  visualizers.py
stub/personal_graph/: clients.pyi  embeddings.pyi  graph.pyi  ml.pyi  models.pyi  retriever.pyi  text.pyi  visualizers.pyi
tests/: conftest.py  database_test.py  simple_graph_test.py  test_common.py  test_database.py  test_graph.py  test_ml.py  test_natural.py  test_visualizers.py  visualizers_test.py
vector-graph-search/: app.py
(+47 files in other folders)
