[tool.poetry]
name = "libsql-graph-db"
version = "0.1.2"
description = "Graph database in LibSQL"
authors = ["Anubhuti Bhardwaj <anubhutibhardwaj11@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = [
    { path = "examples/libsql-graph.ipynb" }
]

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.1"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
sqlite-vss = "^0.1.2"
openai = "^1.14.2"
libsql-experimental = "^0.0.28"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
ruff = "^0.3.2"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
