[tool.poetry]
name = "personal-graph"
version = "0.1.6"
description = "Graph database in LibSQL"
authors = ["Anubhuti Bhardwaj <anubhutibhardwaj11@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = [
    { path = "examples/personal-graph.ipynb" }
]

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.1"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
sqlite-vss = "^0.1.2"
openai = "^1.14.2"
libsql-experimental = "^0.0.28"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
instructor = "^0.6.7"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlean-py = "^3.45.1"
streamlit = "^1.33.0"
types-pygments = "^2.17.0.20240310"
types-decorator = "^5.1.8.20240310"
dspy-ai = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
ruff = "^0.3.2"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[tool.poetry.extras]
scrollable-textbox = ["streamlit-scrollable-textbox"]

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
