[metadata]
name = simple-graph-sqlite
version = 2.0.0
author = Denis Papathanasiou
description = A simple graph database in SQLite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpapathanasiou/simple-graph
project_urls =
    Bug Tracker = https://github.com/dpapathanasiou/simple-graph/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
